--- a/Social Media/Info.plist
+++ b/Social Media/Info.plist
@@ -42,6 +42,8 @@
 	</dict>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location needed to use Nearby. Location will Never be shared.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
